# tu-tru-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yaml  test.yaml
docs/: algorithm.md  api-spec.md  bat-tu-audit-vectors.xlsx  fe-van-trinh-nam.md  frontend-design-guide.md  test-cases.md  van-trinh-nam-outline.md
docs/seed/: hop-tuoi-readings.json  hung-ngay.json  intent-rules.json  phi-tinh-stars.json  phi-tinh-year-center.json  phong-thuy-couple-remedies.json  phong-thuy-purposes.json  sao-ngay.json  than-sat.json  tiet-khi.json  truc.json  truong-sinh.json  van-trinh-nam-writing-brief.json
scripts/: fly-start-combined.sh  generate_direction_c_fixtures.py
src/: app.py  calendar-service.js  calendar-service.test.js  calendar_service.py  filter.js  filter.py  pillars.js  scoring.js  scoring.py  scoring.test.js
src/api/: day_score_response.py  errors.py  gio_slots.py  intent_rules_loader.py  parse_date.py  profile_store.py  rate_limit.py  share.py  tz.py  van_trinh_nam_luan_context.py  version.py
src/cache/: redis.py
src/engine/: bazi_solar.py  calendar_month_summary.py  can_chi.py  chart_bundle.py  chart_contract.py  chon_ngay_copy.py  cung_menh.py  cuong_nhuoc.py  dai_van.py  day_score.py  dung_than.py  hoa_hop.py  hoang_dao.py  hop_tuoi.py  hung_ngay.py  huong_by_hanh.py  la_so.py  lich_hnd.py  (+23 more)
tests/: conftest.py
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+96 files in other folders)
