[project]
name = "tu-tru-api"
version = "0.1.0"
description = "Bát Tự Date Selection API"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "pydantic>=2,<3",
    "uvicorn>=0.27,<1",
    "lunardate>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=7,<9",
    "httpx>=0.25",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/engine"]
